[package]
name = "closewait"
version = "0.1.0"
authors = ["detailyang <detailyang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
procfs = "0.8"
anyhow = "1.0"
ptrace-do-rs = "0.1"
colored = "2"
humantime = "2.0"